--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ cellSpacing=5 cellPadding=5 border=0>
             <!--<Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
             <br>
             <br> -->
+            <Strong> I am on sabbatical at <a href="https://www.jetbrains.com/research/">JetBrains Research</a>.</Strong> Because of my limited time at the university, I am not able to take much service; I appreciate your understanding.
+            <br>
+            <br> 
             <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, we invite you to watch this short <a href="https://www.youtube.com/watch?v=wq6xQHhJkAs">video</a> to see how you can leverage our PhD students and faculty. I would love to schedule a discovery session to learn how we can serve you with our <a href="http://ppicenter.org">NSF industry-university consortium</a>.
             <br>
            <!-- <br><Strong> Open Positions: </Strong> looking for a postdoc to join my team. -->
