Added PyCraft paper

--- a/research.html
+++ b/research.html
@@ -157,6 +157,15 @@ cellSpacing=5 cellPadding=5 border=0>
 			 <table cellpadding=5 cellspacing=5> 
 			 
 			            <tr> 
+			            <td> FSE 2024
+						<td> <a href="./papers/PyCraft_FSE2024.pdf">Unprecedented Code Change Automation: The Fusion of
+LLMs and Transformation by Example</a> 
+						<br> Malinda Dilhara, Abhiram Bellur, Timofey Bryksin, and Danny Dig
+                        <br> Proceedings of <Strong>FSE'24</Strong>, 22 pages, Porto de Galinhas, Brazil, July 2024.
+                        <!-- <br>  Acceptance ratio: 26% (197/757) -->
+                        <br> <a href="https://pycrafttool.github.io/"> Companion Results and Tools</a>
+			             
+			            <tr> 
 			            <td> ICSE 2023
 						<td> <a href="./papers/PyEvolve_ICSE2023.pdf">PyEvolve: Automating Frequent Code Changes in Python ML Systems</a> 
 						<br> Malinda Dilhara, Ameya Ketkar, and Danny Dig
