added ASE CMG paper

--- a/research.html
+++ b/research.html
@@ -174,6 +174,14 @@ LLMs and Transformation by Example</a>
                         <br> <a href="https://pythoninfer.github.io"> Companion Results and Tools</a>
 			            
 			            <tr> 
+			            <td> ASE 2023
+						<td> <a href="./papers/ASE23-CMG.pdf">From Commit Message Generation to History-Aware Commit Message Completion</a> 
+						<br> Aleksandra Eliseeva, Yaroslav Sokolov, Egor Bogomolov, Yaroslav Golubev, Danny Dig, Timofey Bryksin
+                        <br> Proceedings of <Strong>ASE'23</Strong>, pp 723-735, Luxemburg, Sept 2023.
+                        <br>  Acceptance ratio: 21% (134/629) 
+                        <br> <a href="https://github.com/JetBrains-Research/commit_message_generation"> Companion Results and Tools</a>
+			            
+			            <tr> 
 			            <td> ICSE 2022
 						<td> <a href="./papers/ICSE22_Repetitive_Changes_in_Python_ML_Systems.pdf">Discovering Repetitive Code Changes in Python ML Systems</a> 
 						<br> Malinda Dilhara, Ameya Ketkar, Nikhith Sannidh, and Danny Dig
