added EM-assist ICMSE paper

--- a/research.html
+++ b/research.html
@@ -164,6 +164,14 @@ LLMs and Transformation by Example</a>
                         <br> Proceedings of <Strong>FSE'24</Strong>, 22 pages, Porto de Galinhas, Brazil, July 2024.
                         <!-- <br>  Acceptance ratio: 26% (197/757) -->
                         <br> <a href="https://pycrafttool.github.io/"> Companion Results and Tools</a>
+			            
+			             <tr>  
+			            <td> ICSME 2024
+						<td> <a href="./papers/EM-Assist.pdf">Next-Generation Refactoring: Combining LLM Insights and IDE Capabilities for Extract Method</a> 
+						<br> Dorin Pomian, Abhiram Bellur, Malinda Dilhara, Zarina Kurbatova, Egor Bogolomov, Timofey Bryksin, and Danny Dig
+                        <br> Proceedings of <Strong>ICMSE'24</Strong>, 13 pages, Flagstaff, AZ, USA, Oct 2024.
+                        <br>  Acceptance ratio: 26% (49/188)
+                        <br> <a href="https://github.com/llm-refactoring/llm-refactoring-plugin/tree/main#readme"> Companion Results and Tools</a>
 			             
 			            <tr> 
 			            <td> ICSE 2023
