added job description for hourly position and updates to GenAI research

--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@ cellSpacing=5 cellPadding=5 border=0>
             large programs. Just as machinery fostered the industrial revolution, 
             machinery automating software changes will foster a revolution in 
             software technology. 
-            We successfully pioneered interactive program transformations by opening the field of refactoring in cutting-edge domains including AI/ML, mobile, parallelism, component-based, testing, and end-user programming. 
+            We successfully pioneered interactive program transformations by opening the field of refactoring in cutting-edge domains including LLM-powered static analysis, mobile, parallelism, component-based, testing, and end-user programming. 
             
             
             <P>Some of the techniques our team developed are shipping with the official release of 
