--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@ cellSpacing=5 cellPadding=5 border=0>
             
             <P><Strong>SHORT BIO</Strong> <BR>
             Danny Dig is an associate professor of computer science at the University of Colorado, 
-            and an adjunct professor at University of Illinois and Oregon State. 
- He enjoys doing research in Software Engineering, with a focus on 
+            and an adjunct professor at University of Illinois. 
+ He enjoys doing research in Software Engineering and Gen-AI, with a focus on 
  interactive program transformations that improve programmer productivity and software quality. 
  He successfully pioneered interactive program transformations by opening the field of refactoring 
- in cutting-edge domains including AI/ML, mobile, concurrency and parallelism, component-based, testing, and end-user programming.
+ in cutting-edge domains including LLM-powered refactorings, mobile, concurrency and parallelism, component-based, testing, and end-user programming.
  He earned his Ph.D. from the University of Illinois at Urbana-Champaign where his research
  won the best Ph.D. dissertation award, and the First Prize at the ACM
  Student Research Competition Grand Finals. He did a postdoc at MIT.
   
- <P>He (co-)authored 60+ journal and conference papers that appeared in top
+ <P>He (co-)authored 70+ journal and conference papers that appeared in top
  places in SE/PL. According to Google Scholar his publications have been
- cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">6300+ times</a>. His group's research was recognized with 9 paper awards at the flagship and top conferences in SE (FSE'17, OOPSLA'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
+ cited <a href="https://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">7600+ times</a>. His group's research was recognized with 9 paper awards at the flagship and top conferences in SE (FSE'17, OOPSLA'17, ICSME'17, FSE'16, ICSE'14, ISSTA'13, ICST'13, ICSME'15), 
  4 award runner-ups, and 1 most influential paper award (N-10 years) at ICSME'15, and 3 winners of the ACM Student Research Competition. He received the NSF CAREER award, the Google Faculty Research Award (twice), 
  and the Microsoft Software Engineering Innovation Award (twice).
  His research group released dozens of software systems, among them the
@@ -100,7 +100,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <LI>How can we automate them to improve programmers' productivity and software quality? 
              </LI></OL>
           Over the years we have successfully automated program transformations to (i) retrofit parallelism into sequential code, (ii) improve responsiveness of mobile apps, (iii) upgrade component-based applications, (iv) update obsolete tests, (v) make end-user programs easier to change, and (vi) improve productivity of ML engineers.<BR>
-          <P>General interests:- <strong>automated refactoring</strong>, interactive program analysis and transformation, 
+          <P>General interests:- <strong>automated refactoring</strong>, <strong>LLM-powered program analysis</strong> and transformation, 
           design & architectural patterns, and broadly interested in <strong>concurrency and parallelism, mobile computing</strong>, software development processes, program analysis, software testing, and software evolution </P>
             <P></P>
             <P><STRONG>Research Impact:</STRONG></P>
@@ -118,7 +118,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
-            <LI> Oct 2024: I am joining a group of thought leaders teaching about how to use GenAI for software engineering development and research <a href="https://www.aiwarebootcamp.org">Learn more about the AIware Leadership Bootcamp</a>. 
+            <LI> Oct 2024: I am joining a group of thought leaders teaching about how to use GenAI for software engineering development and research. <a href="https://www.aiwarebootcamp.org">Learn more about the AIware Leadership Bootcamp</a>. 
             <LI> May 2024: I gave a webinar at JetBrains Academy on <a href="https://www.youtube.com/watch?v=4uy9Na0mLWI">understanding, connecting, and effective teaching Gen Z students</a>. 
             <LI> April 2024: We organized <a href="https://ide-workshop.github.io">the IDE Workshop at ICSE'24</a>, building up a community of researchers and IDE builders that deeply care about practical impact on software developers by leveraging the massive outreach of IDEs. 
             <LI> Feb 2022: I am honored to receive the IoT Innovator of 2021 award, and to be in a <a href="https://www.iotinnovator.com/inaugural-iot-czar-of-the-year-awards-for-2021/winners/">community of thought leaders</a> who are shaping the future of IoT systems. I view this award as truly a recognition for our whole team of faculty, students, and industry members at the <a href="https://ppicenter.org">PPI Center</a>.
