announcing the new GenAI SE course

--- a/teaching.html
+++ b/teaching.html
@@ -48,6 +48,7 @@ cellSpacing=5 cellPadding=5 border=0>
                
             <h2>University courses</h2> 
             <ul>
+            <li><Strong>Fall'25:</Strong> Excited to launch a brand-new course on "GenAI-powered Software Engineering". We are exploring how GenAI improves the developer productivity and learn new software development workflows enabled by AI Assistants and Agents. Grad course at CU Boulder.
             <li><Strong>Spring'22:</Strong> <a href="https://danny.cs.colorado.edu/courses/csci7000-008_Sp22/">Software Development for IoT Systems (CSCI 7000-008)</a>. Grad course at CU Boulder. 
             <li><Strong>Spring'21:</Strong> <a href="http://danny.cs.colorado.edu/courses/OOAD_Sp21">Object-Oriented Analysis and Design (CSCI 4448/5448)</a>. Grad/undergrad course at CU Boulder. 
             <li><Strong>Spring'19:</Strong> <a href="http://web.engr.oregonstate.edu/~digd/courses/cs563_Sp19">Software Maintenance and Evolution (CS563)</a>. Grad course at OSU. 
