--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
+            <LI> April 2025: Excited to launch a brand-new course on "GenAI-powered Software Engineering" in Fall 2025. We are exploring how GenAI improves the developer productivity and learn new software development workflows enabled by AI Assistants and Agents.
+            <LI> April 2025: We are doing a 2-day version of the AIware Bootcamp at the ICSE'25 conference. <a href="https://www.aiwarebootcamp.com/mini.html">Register and details here.</a>
             <LI> Oct 2024: I am joining a group of thought leaders teaching about how to use GenAI for software engineering development and research. <a href="https://www.aiwarebootcamp.org">Learn more about the AIware Leadership Bootcamp</a>. 
             <LI> May 2024: I gave a webinar at JetBrains Academy on <a href="https://www.youtube.com/watch?v=4uy9Na0mLWI">understanding, connecting, and effective teaching Gen Z students</a>. 
             <LI> April 2024: We organized <a href="https://ide-workshop.github.io">the IDE Workshop at ICSE'24</a>, building up a community of researchers and IDE builders that deeply care about practical impact on software developers by leveraging the massive outreach of IDEs. 
