updated with feedback from Raihan

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -48,7 +48,7 @@ and open the template in the editor.
         Prof. <a href="http://danny.cs.colorado.edu">Danny Dig</a> (<a href="mailto:danny.dig@coloradoedu">danny.dig@colorado.edu</a>)
         <br />Office: On Zoom
         <br />Phone: (303) 492-1293
-        <br />Office Hours: right after class
+        <br />Office Hours: right after class, additional slots offered each week to accomodate various schedules. 
         </p>
     </div>
     
@@ -92,7 +92,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
         </li><li>practice engaging in dialogue with thought leaders in GenAI Software Engineering.
         </li><li>have fun learning 
         </li></ul>
-        <p></p><strong><a href='./syllabus.html'>Course Syllabus</a></strong></p>
+        <p></p> View the full <strong><a href='./syllabus.html'>Course Syllabus</a></strong> page for grading, policies, etc. </p>
     </div>
     <h3>SCHEDULE</h3>
     This is a tentative schedule to give you an idea of the topics that we study in the class. Some of the assigned papers are likely to change based on the projects that students work on, once we finalize the list of course projects.
