--- a/courses/csci7000-011_F25/paperCritiques.html
+++ b/courses/csci7000-011_F25/paperCritiques.html
@@ -33,7 +33,7 @@ and open the template in the editor.
         </div>
         <h3>SUMMARY</h3>
         <div>
-            <p>We will usually have two papers discussed per meeting. Each student need to read 
+            <p>We will have two papers discussed per meeting. Each student need to read 
             all assigned papers and write reports. 
             <!--but write only one paper critique. You can choose any of the 
             papers listed for that meeting. -->
@@ -43,8 +43,9 @@ and open the template in the editor.
             <p>
                 Students should critique the papers to be discussed in class. Do not directly 
                 copy the abstract, introduction, conclusion or any other part of the paper - you 
-                must add value and insight beyond what is already in the paper. Unless specified 
-                otherwise, all paper critiques are due by 5pm the day before the respective class and should address the following questions: 
+                must add value and insight beyond what is already in the paper. 
+                Unless specified otherwise, all paper critiques are due by 5pm the day before the respective class 
+                and should address the following questions (inspired from this excellent resource on how to <a class='urllink' href='http://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html' rel='nofollow'>Read an Engineering Research paper</a> by William Griswold): 
             </p>
         </div>
         
