added Zoom link

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -37,7 +37,7 @@ and open the template in the editor.
                 Tue and Thu, 2:00-3:15 PM<br />
                 <!-- <p style="color:red">Based on CU's starting the Spring semester remote for the first two weeks, we will meet on Zoom (this Zoom link requires authenticating with your CU Boulder credentials).</p> <a href="https://cuboulder.zoom.us/j/96670974495">https://cuboulder.zoom.us/j/96670974495</a> <br />
                 Once we resume classes in person, --> 
-                <p>Meets Remotely on Zoom (you need to authenticate with your colorado.edu on this <a href="https://cuboulder.zoom.us/j/98033152097" rel='nofollow'>link</a>)
+                <p>Meets Remotely on Zoom:  <a href="https://cuboulder.zoom.us/j/98033152097" rel='nofollow'>https://cuboulder.zoom.us/j/98033152097</a> (you need to authenticate with your colorado.edu credentials)
                 <p style="color: red;">Three times per semester (first day of class on <b>Aug 21</b>, mid semester, and last week on Dec 2 or 4), this class meets in person: Discovery Learning Center (DLC) 1B70 </p> 
               
             
