added course on webpage

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@ cellSpacing=5 cellPadding=5 border=0>
             <P style="color:red"> 
             <!--<Strong> Hiring a CU grad student </Strong> for assisting on my group's research this summer. See the position description and application info <a href="https://danny.cs.colorado.edu/jobDescription_hourly.txt">HERE.</a>
             <br>
-            <br> -->
+            <br> 
             <Strong> I am on sabbatical at <a href="https://www.jetbrains.com/research/">JetBrains Research</a>.</Strong> Because of my limited time at the university, I am not able to take much service; I appreciate your understanding.
+            -->
             <br>
             <br> 
             <Strong> Serving Industry: </Strong> If you are working in industry on AI/ML for IoT systems, we invite you to watch this short <a href="https://www.youtube.com/watch?v=wq6xQHhJkAs">video</a> to see how you can leverage our PhD students and faculty. I would love to schedule a discovery session to learn how we can serve you with our <a href="http://ppicenter.org">NSF industry-university consortium</a>.
@@ -118,7 +119,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
-            <LI> April 2025: Excited to launch a brand-new course on "GenAI-powered Software Engineering" in Fall 2025. We are exploring how GenAI improves the developer productivity and learn new software development workflows enabled by AI Assistants and Agents.
+            <LI> April 2025: Excited to launch a brand-new course on <a href="https://danny.cs.colorado.edu/courses/csci7000-011_F25/index.html">GenAI-powered Software Engineering</a> in Fall 2025. We are exploring how GenAI improves the developer productivity and learn new software development workflows enabled by AI Assistants and Agents.
             <LI> April 2025: We are doing a 2-day version of the AIware Bootcamp at the ICSE'25 conference. <a href="https://www.aiwarebootcamp.com/mini.html">Register and details here.</a>
             <LI> Oct 2024: I am joining a group of thought leaders teaching about how to use GenAI for software engineering development and research. <a href="https://www.aiwarebootcamp.org">Learn more about the AIware Leadership Bootcamp</a>. 
             <LI> May 2024: I gave a webinar at JetBrains Academy on <a href="https://www.youtube.com/watch?v=4uy9Na0mLWI">understanding, connecting, and effective teaching Gen Z students</a>. 
