updated teaching and research

--- a/research.html
+++ b/research.html
@@ -56,8 +56,8 @@ cellSpacing=5 cellPadding=5 border=0>
  		
  		    <P> <B>Research Key Statistics</B>:
  		    <ul style="list-style-type:circle">
-            <li>$7.4M as lead PI, ($5.9M from NSF, $1.5M from industry). My share: $2.8M</li>
-            <li>50+ peer-reviewed conference papers (see all in <a href="http://dblp.uni-trier.de/pers/hd/d/Dig:Danny">DBLP )</a></li>
+            <!--<li>$7.4M as lead PI, ($5.9M from NSF, $1.5M from industry). My share: $2.8M</li> -->
+            <li>70+ peer-reviewed conference papers (see all in <a href="http://dblp.uni-trier.de/pers/hd/d/Dig:Danny">DBLP</a> and <a href="http://scholar.google.com/citations?user=z9MS0rEAAAAJ&hl=en">Google Scholar</a>)</li>
                 <ul>
                    <li>9 paper awards at flagship/top conferences (FSE'17, OOPSLA'17, ICSME'17, FSE'16, ICSE'14, ICSME'15, ISSTA'13, ICST'13) + 1 most influential award (N-10 years) at ICSME'15 + 4 award nominees</li>
                    <li>50+ full papers in flagship/top ACM/IEEE venues in SE (<25% acceptance ratio)</li>
