updated link to Canvas

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -122,7 +122,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
                 <ul>
                 <li> Read two papers: (1) <a href="https://arxiv.org/abs/2308.10620">Large Language Models for Software Engineering: A Systematic Literature Review</a> by Hou et al., TOSEM 2024</li>
                 <li> Read: (2) <a href="https://arxiv.org/abs/2310.03533">Large Language Models for Software Engineering: Survey and Open Problems</a> by Fan et al., ICSE 2023: Future of Software Engineering. </li>
-                <li> Afterwards, write a <a href="./paperCritiques.html">paper critique</a> for each paper. After you write the paper critique, please submit it <a href="https://TBD">here on Canvas</a> (due by Mon, Aug 25 at 5pm).</li>
+                <li> Afterwards, write a <a href="./paperCritiques.html">paper critique</a> for each paper. After you write the paper critique, please submit it <a href="https://canvas.colorado.edu/courses/122425/assignments/2462618">here on Canvas</a> (due by Mon, Aug 25 at 5pm).</li>
                 <li>Read course <a href="./syllabus.html">syllabus</a> (and other info on our class webpage). </li>
                 
                 </ul>
