updated with Piazza

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -83,7 +83,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
         <p>The course will offer an opportunity for students to pursue research-oriented or novel industrial
         term projects in small teams (3-4 students). Students may pursue any project of
         their choosing that explores the intersection of GenAI with processes and tools used in Software Engineering. </p>
-        <p>The course will offer several opportunities for interactions with the movers and shakers in GenAI from industry and academic research labs. 
+        <p>The course will offer several opportunities to learn from the movers and shakers in GenAI from industry and academic research labs. 
     <h3>COURSE OBJECTIVES</h3>
         <ul><li>expand student's knowledge more broadly about GenAI-based Software Engineering research & practice through reading research papers and industry surveys
         </li><li>develop critical thinking abilities by being able to assess the quality of published research and pose new research questions
@@ -111,7 +111,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
                 <ul>
                 <li>Course Introduction and discussing your expectations. </li>
                 <li>Read this excellent resource on how to <a class='urllink' href='http://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html' rel='nofollow'>Read an Engineering Research paper</a> (by William Griswold). </li>
-                <li>Sign up on Piazza (TBA soon). <!--  <a class='urllink' href='http://piazza.com/colorado/fall2025/TBD' rel='nofollow'>Piazza</a>.</li> -->
+                <li>Sign up on <a class='urllink' href='https://piazza.com/colorado/fall2025/csci7000011' rel='nofollow'>Piazza</a>.</li> 
                 </ul>
             </td>
         </tr>
