--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -109,7 +109,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
             <td> Danny Dig </td>
             <td> 
                 <ul>
-                <li>Course Introduction and discussing your expectations. </li>
+                <li>Course Introduction and discussing your expectations. <a href="./pdfs/CSCI_7000_011_W1L1.pdf">Slides presented in class</a>. </li>
                 <li>Read this excellent resource on how to <a class='urllink' href='http://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html' rel='nofollow'>Read an Engineering Research paper</a> (by William Griswold). </li>
                 <li>Sign up on <a class='urllink' href='https://piazza.com/colorado/fall2025/csci7000011' rel='nofollow'>Piazza</a>.</li> 
                 </ul>
