--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -137,7 +137,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
                 <ul>
                 <li> Part 2 - <a href="https://arxiv.org/abs/2308.10620">Large Language Models for Software Engineering: A Systematic Literature Review</a> by Hou et al., TOSEM 2024</li>
                 <li> <a href="https://arxiv.org/abs/2310.03533">Large Language Models for Software Engineering: Survey and Open Problems</a> by Fan et al., ICSE 2023: Future of Software Engineering. </li>
-                <li>Read course <a href="./syllabus.html">syllabus</a> (and other info on our class webpage). </li>
+                <li>Read about the <a href="./researchProject.html">research project</a> (and other info on our class webpage). </li>
                 
                 </ul>
             </td>
