--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -151,6 +151,7 @@ systems deployed in production or in research; (ii) Learn to critically assess A
             </td>
             <td> 
                 <ul>
+                <li> <a href="./pdfs/W3_L1_EM-Assist_PyCraft.pdf">Slides presented in class</a></li>
                 <li> <a href="https://dl.acm.org/doi/10.1145/3643755"> Unprecedented Code Change Automation: The Fusion of LLMs and Transformation by Example</a> by Dilhara et al., FSE'24
                 <li> <a href="https://ieeexplore.ieee.org/document/10795061"> Next-Generation Refactoring: Combining LLM
 Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
@@ -163,7 +164,7 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             </td>
             <td><ul>
             <li><a href="https://danny.cs.colorado.edu/papers/ICSME25_MM-Assist.pdf">Together We Are Better: LLM, IDE and Semantic Embedding to Assist Move Method Refactoring</a> by Bellur et al., ICSME'25  </li>
-            <li><a href="https://arxiv.org/abs/2410.12046">Towards Realistic Evaluation of Commit Message Generation by Matching Online and Offline Settings</a> by Tsvetkov et al., ICSE'25     </li>
+           <!-- <li><a href="https://arxiv.org/abs/2410.12046">Towards Realistic Evaluation of Commit Message Generation by Matching Online and Offline Settings</a> by Tsvetkov et al., ICSE'25     </li> -->
             </ul>
             </td>
         </tr>
