--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -163,6 +163,7 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td> Danny Dig 
             </td>
             <td><ul>
+            <li> <a href="./pdfs/W3_L2_MMAssist_ICSME2025.pdf">Slides presented in class</a></li>
             <li><a href="https://danny.cs.colorado.edu/papers/ICSME25_MM-Assist.pdf">Together We Are Better: LLM, IDE and Semantic Embedding to Assist Move Method Refactoring</a> by Bellur et al., ICSME'25  </li>
            <!-- <li><a href="https://arxiv.org/abs/2410.12046">Towards Realistic Evaluation of Commit Message Generation by Matching Online and Offline Settings</a> by Tsvetkov et al., ICSE'25     </li> -->
             </ul>
