updated schedule with David Lo's keynote

--- a/courses/csci7000-011_F25/projectProposal.html
+++ b/courses/csci7000-011_F25/projectProposal.html
@@ -50,7 +50,7 @@ and open the template in the editor.
         <h3>PRESENTATION PROCEDURE</h3>
         <div>
             <p>
-                During class, each of you gets 1 minute to pitch a project idea. Your proposal will be preloaded with all the PDF slides on the professor's laptop.
+                During class, each of you gets <b>2 minutes</b> to pitch a project idea, followed by feedback/questions from the professor and classmates. Your project proposal will be preloaded with all the PDF slides on the professor's laptop.
             </p>
             <p>
                 Project ideas proposed by professor. This is not a comprehensive list, instead it provides samples of projects that are within the scope of the class:
