updated schedule for time in Australia

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -181,6 +181,8 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td>09/09</td>
             <td>David Lo</td>
             <td> <ul> 
+            <li> <p style="color: red;">Notice that this class starts at 3pm MT </p> 
+              </li>
             <li> <a href="https://conf.researchr.org/details/icsme-2025/icsme-2025-icsme-plenary-events/47/Code-Critique-Cure-Advancing-LLM-Reasoning-for-AI-Augmented-Software-Maintenance">Code, Critique, Cure: Advancing LLM Reasoning for AI-Augmented Software Maintenance</a> By David Lo -- keynote at ICSME'25.</li>
         	</ul></td>
         </tr>
@@ -199,6 +201,7 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td><ul>
              <li> Project Bazaar</li>
              <li><a href="./projectTeams.html">Form project teams</a></li>
+             <li> <p style="color: red;"> Notice this class meets in person: Discovery Learning Center (DLC) 1B20 </p></li>
             </ul>
             </td>
         </tr>
@@ -209,6 +212,7 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td><ul>
              <li> Project Bazaar</li>
              <li><a href="./projectTeams.html">Form project teams</a></li>
+            <li> <p style="color: red;"> Notice this class meets in person: Discovery Learning Center (DLC) 1B20 </p></li>
             </ul>
             </td>
         </tr>
