instructions to upload paper presentation on Canvas

--- a/courses/csci7000-011_F25/paperPresentation.html
+++ b/courses/csci7000-011_F25/paperPresentation.html
@@ -58,6 +58,10 @@ and open the template in the editor.
                 You will also receive 20 points credit for moderating & generating live open discussions using your own critique but also critique questions that you received from your colleagues.
             </p>
             
+             <p>
+                After you presented in class, please upload a PDF of your slides in Canvas, and also feel free to share your slides with your classmates on Piazza.
+            </p>
+            
         </div>
     </div>
 </body>
