--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -233,7 +233,7 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td>09/30</td>
             <td>Martini, Evan</td>
             <td> <ul> 
-            <li> <a href="https://conf.researchr.org/details/icsme-2025/icsme-2025-papers/27/A-Taxonomy-of-Inefficiencies-in-LLM-Generated-Code">A Taxonomy of Inefficiencies in LLM-Generated Code.</a> By Abbassi et al., ICSME'25.</li>
+            <li> <a href="https://arxiv.org/abs/2503.06327">A Taxonomy of Inefficiencies in LLM-Generated Code.</a> By Abbassi et al., ICSME'25.</li>
             <li> <a href="https://conf.researchr.org/details/icsme-2025/icsme-2025-papers/31/Can-LLMs-Update-API-Documentation-">Can LLMs Update API Documentation?</a> By Lee et al., ICSME'25.</li>
         	</ul></td>
         </tr>
