updated schedule for 10/07

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -253,8 +253,8 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td>10/07</td>
             <td> Uditanshu, Archit</td>
             <td> <ul> 
-            <li> TBA </li>
-            <li> TBA </li>
+            <li> <a href="https://arxiv.org/pdf/2406.07765">Using AI-Based Coding Assistants in Practice: State of Affairs, Perceptions, and Ways Forward</a> by Sergeyuk et al., ICSME'25 journal-first paper.</li>
+            <li> <a href="https://arxiv.org/pdf/2507.19909">The Impact of Fine-tuning Large Language Models on Automated Program Repair </a> by Machacek et al., ICSME'25. </li>
         	</ul></td>
         </tr>
         
