--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -260,11 +260,19 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
         
         <tr>
             <td>10/09</td>
+            <td>No Class</td>
+            <td> <ul> 
+            <li> CU Boulder Reading Day.</li>
+        	</ul></td>
+        </tr>
+        <!--
+         <tr>
+            <td>10/09</td>
             <td>Danny Dig</td>
             <td> <ul> 
             <li><a href="TBA">Multi-Agent Framework for Coordinated Refactoring</a> by Bellur et al., Writers' Workshop.</li>
         	</ul></td>
-        </tr>
+        </tr> -->
         
         <tr>
             <td>10/14</td>
