update schedule for 10/14

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -278,8 +278,8 @@ Insights and IDE Capabilities for Extract Method</a> by Pomian et al., ICSME'24.
             <td>10/14</td>
             <td>Raihan, Vijay</td>
             <td> <ul> 
-            <li> TBA </li>
-            <li> TBA </li>
+            <li> <a href="https://arxiv.org/abs/2506.12347"> Sharp Tools: How Developers Wield Agentic AI in Real Software Engineering Tasks</a> by Kumar et al., to Appear in ASE'25. </li>
+            <li> <a href="https://arxiv.org/pdf/2411.04444">An Empirical Study on the Potential of LLMs in Automated Software Refactoring </a> by Liu et al, Journal of Automated Software Engineering, 2025.</li>
         	</ul></td>
         </tr>
         
