updated schedule for 10/23

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -306,8 +306,9 @@ effort estimation </a> by Bui et al., to Appear in ASE'25. </li>
             <td>10/23</td>
             <td>Martini, Evan</td>
             <td> <ul> 
-            <li> TBA </li>
-            <li> TBA </li>
+            <li> <a href="https://arxiv.org/pdf/2503.14340">MANTRA: Enhancing Automated Method-Level Refactoring with
+Contextual RAG and Multi-Agent LLM Collaboration</a> by Xu et al., 2025 </li>
+            <li> <a href="https://arxiv.org/pdf/2506.01825">Backdoors in Code Summarizers: How Bad Is It?</a> by Wang et al., to Appear in ASE'25. </li>
         	</ul></td>
         </tr>
         
