added Haifeng to the schedule

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -347,6 +347,13 @@ Contextual RAG and Multi-Agent LLM Collaboration</a> by Xu et al., 2025 </li>
             </td>
         </tr>
         
+        <tr>
+            <td>11/20</td>
+            <td><a href="https://www.linkedin.com/in/haifeng-chen-aa570090/">Haifeng Chen</a></td>
+            <td> <ul> 
+            <li> The Head of Data Science at NEC Laboratories America presents exciting research in the field of GenAI.</li>
+        	</ul></td>
+        </tr>
         
         <tr>
             <td>11/25</td>
