updated schedule and Tool Experience Report

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -348,6 +348,14 @@ Contextual RAG and Multi-Agent LLM Collaboration</a> by Xu et al., 2025 </li>
         </tr>
         
         <tr>
+            <td>11/11</td>
+            <td><a href="">Giuseppe "Beppe" Raffa</a></td>
+            <td> <ul> 
+            <li> Principal AI Engineer and Research Manager at Intel Labs,  presents exciting applications they've been developing based on GenAI.</li>
+        	</ul></td>
+        </tr>
+        
+        <tr>
             <td>11/20</td>
             <td><a href="https://www.linkedin.com/in/haifeng-chen-aa570090/">Haifeng Chen</a></td>
             <td> <ul> 
