added paper for Uditanshu on 10/30

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -325,7 +325,8 @@ Contextual RAG and Multi-Agent LLM Collaboration</a> by Xu et al., 2025 </li>
             <td>10/30</td>
             <td> Uditanshu, Archit</td>
             <td> <ul> 
-            <li> <a href=""></a> </li>
+            <li> <a href="https://dl.acm.org/doi/10.1145/3650212.3680379">
+One-to-One or One-to-Many? Suggesting Extract Class Refactoring Opportunities with Intra-class Dependency Hypergraph Neural Network"</a> by Cui et al, in ISSTA'24. </li>
             <li> <a href="https://arxiv.org/abs/2506.24015">Hierarchical Knowledge Injection for Improving LLM-based Program Repair</a> by Ehsani et al., to appear in ASE'25. </li>
         	</ul></td>
         </tr>
