--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -314,10 +314,9 @@ Contextual RAG and Multi-Agent LLM Collaboration</a> by Xu et al., 2025 </li>
         
         <tr>
             <td>10/28</td>
-            <td>Ishika, Varun</td>
+            <td>Ishika</td>
             <td> <ul>
             <li> <a href="https://www.researchgate.net/publication/394255549_Prompting_Matters_Assessing_the_Effect_of_Prompting_Techniques_on_LLM-Generated_Class_Code">Prompting Matters: Assessing the Effect of Prompting Techniques on LLM-Generated Class Code</a> by Yuen et al. in ICSME'25 NIER track.  </li>
-            <li> <a href="https://ieeexplore.ieee.org/document/11029812">NIODebugger: A Novel Approach to Repair Non-Idempotent-Outcome Tests with LLM-Based Agent</a> by Ke et al., in ICSE'25.</li>
             </ul></td>
         </tr>
         
