added Ameya to the schedule

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -365,6 +365,14 @@ One-to-One or One-to-Many? Suggesting Extract Class Refactoring Opportunities wi
         </tr>
         
         <tr>
+            <td>11/18</td>
+            <td><a href="https://www.linkedin.com/in/ameya-ketkar/">Ameya Ketkar</a></td>
+            <td> <ul> 
+            <li> Founding Software Engineer at <a href="https://gitar.ai">Gitar</a> presents how they supercharge Continuous Integration with AI.</li>
+        	</ul></td>
+        </tr>
+        
+        <tr>
             <td>11/20</td>
             <td><a href="https://www.linkedin.com/in/haifeng-chen-aa570090/">Haifeng Chen</a></td>
             <td> <ul> 
