added iSmell paper

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -335,7 +335,8 @@ One-to-One or One-to-Many? Suggesting Extract Class Refactoring Opportunities wi
             <td>Varun, Vijay</td>
             <td> <ul> 
             <li> <a href="https://ieeexplore.ieee.org/document/11029812">NIODebugger: A Novel Approach to Repair Non-Idempotent-Outcome Tests with LLM-Based Agent</a> by Ke et al., in ICSE'25.</li>
-            <li> TBA </li>
+            <li> <a href="https://dl.acm.org/doi/pdf/10.1145/3691620.3695508">iSMELL: Assembling LLMs with Expert Toolsets for Code Smell
+Detection and Refactoring</a>, by Wu et al, in ASE'24. </li>
         	</ul></td>
         </tr>
         
