updated webpage with announcement about Spring'26 GenAI courses

--- a/teaching.html
+++ b/teaching.html
@@ -37,7 +37,7 @@ cellSpacing=5 cellPadding=5 border=0>
            
             <h2> Teaching philosophy </h2> 
             <P> My teaching philosophy has developed as I taught computing classes ranging from high school to graduate level, 
-            from small to large undergraduate courses, with traditional audiences as well as over <B>800 professional programmers</B> at industrial courses (the most recent one I held in Portland on Oct 2014). I believe that students' motivation is the most important predictor of what they will learn, so the role of the professor is to stimulate and amplify that motivation by (i) showing the value/utility of the class and (ii) convincing students that the classroom environment is conducive to success. I continuously learn about methods of teaching by working with scholars from the Center for Teaching Excellence.
+            from small to large undergraduate courses, with traditional audiences as well as over <B>1000 professional programmers</B> at industrial courses (the most recent one I taught at <a href="https://www.aiwarebootcamp.io/">AIware Bootcamp</a> in 2025). I believe that students' motivation is the most important predictor of what they will learn, so the role of the professor is to stimulate and amplify that motivation by (i) showing the value/utility of the class and (ii) convincing students that the classroom environment is conducive to success. I continuously learn about methods of teaching by working with scholars from the Center for Teaching Excellence.
 
             <P>I believe the deepest learning occurs in an <i>active learning</i> environment. In CS it is easy to lecture for 75 minutes 
             continuously, but deep learning occurs when students themselves wrestle with the content. To <B>prevent information overload</B>, I divided my lectures into <B>15-minute segments</B> 
@@ -48,6 +48,7 @@ cellSpacing=5 cellPadding=5 border=0>
                
             <h2>University courses</h2> 
             <ul>
+            <li><Strong>Spring'26:</Strong> Stoked to announce two GenAI classes I am teaching in Spring'26. (i) Building Software Agents -- CSCI 7000-005 -- we design, build, and evaluate GenAI-powered software agents through cutting-edge research discussions and a hands-on team project that students can showcase in their portfolio or resume. (ii) AI-Driven Leadership -- CSCI 7000-006 -- we discover how to harness generative AI as a thinking partner to enhance strategic reasoning, problem-solving, and leadership in this hands-on seminar for future technical leaders.
             <li><Strong>Fall'25:</Strong> Excited to launch a brand-new course on <a href="https://danny.cs.colorado.edu/courses/csci7000-011_F25/index.html">GenAI-powered Software Engineering</a>. We are exploring how GenAI improves the developer productivity and learn new software development workflows enabled by AI Assistants and Agents. Grad course at CU Boulder.
             <li><Strong>Spring'22:</Strong> <a href="https://danny.cs.colorado.edu/courses/csci7000-008_Sp22/">Software Development for IoT Systems (CSCI 7000-008)</a>. Grad course at CU Boulder. 
             <li><Strong>Spring'21:</Strong> <a href="http://danny.cs.colorado.edu/courses/OOAD_Sp21">Object-Oriented Analysis and Design (CSCI 4448/5448)</a>. Grad/undergrad course at CU Boulder. 
