updated with Beppe's title

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -352,7 +352,7 @@ Detection and Refactoring</a>, by Wu et al, in ASE'24. </li>
             <td>11/11</td>
             <td><a href="https://www.linkedin.com/in/giuseppe-beppe-raffa/">Giuseppe "Beppe" Raffa</a></td>
             <td> <ul> 
-            <li> Principal AI Engineer and Research Manager at Intel Labs,  presents exciting applications they've been developing based on GenAI.</li>
+            <li> Principal AI Engineer and Research Manager at Intel Labs,  presents "From Tools to Teammates: Generative AI as Collaborative Partners in Industrial Workflows".</li>
         	</ul></td>
         </tr>
         
