added class number

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -421,7 +421,7 @@ Detection and Refactoring</a>, by Wu et al, in ASE'24. </li>
             <td>Danny Dig</td>
             <td> <ul>
             <li> Course Summary: insights and take-aways.
-            <li> <p style="color: red;"> Notice this class meets in person: Discovery Learning Center (DLC)</p></li>
+            <li> <p style="color: red;"> Notice this class meets in person: Discovery Learning Center (DLC) 1B20</p></li>
             </td>
         </tr>
         
