added last lecture

--- a/courses/csci7000-011_F25/index.html
+++ b/courses/csci7000-011_F25/index.html
@@ -420,7 +420,7 @@ Detection and Refactoring</a>, by Wu et al, in ASE'24. </li>
             <td>12/04</td>
             <td>Danny Dig</td>
             <td> <ul>
-            <li> Course Summary: insights and take-aways.
+            <li> Course Summary: insights and what's next. <a href="./pdfs/W14_L2_Endtroduction.pdf">Slides.</a>
             <li> <p style="color: red;"> Notice this class meets in person: Discovery Learning Center (DLC) 1B20</p></li>
             </td>
         </tr>
