added Ai Summit

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ cellSpacing=5 cellPadding=5 border=0>
             <P></P>
             <P><STRONG>NEWS: </STRONG></P>
             <UL>
-            <LI> Nov 2025: Excited to speak about GenAI and how it shapes future leaders at the <a href="https://newyork.theaisummit.com">AI Summit in NY</a>.
+            <LI> Nov 2025: Excited to speak about GenAI and how it shapes future leaders at the <a href="https://newyork.theaisummit.com/speakers/danny-dig?&azletter=D&searchgroup=libraryentry-speakers">AI Summit in NY</a>.
             <LI> Nov 2025: Stoked to announce two GenAI classes I am teaching in Spring'26. (i) Building Software Agents -- CSCI 7000-005 -- we design, build, and evaluate GenAI-powered software agents through cutting-edge research discussions and a hands-on team project that students can showcase in their portfolio or resume. (ii) AI-Driven Leadership -- CSCI 7000-006 -- we discover how to harness generative AI as a thinking partner to enhance strategic reasoning, problem-solving, and leadership in this hands-on seminar for future technical leaders.
             <LI> April 2025: Excited to launch a brand-new course on <a href="https://danny.cs.colorado.edu/courses/csci7000-011_F25/index.html">GenAI-powered Software Engineering</a> in Fall 2025. We are exploring how GenAI improves the developer productivity and learn new software development workflows enabled by AI Assistants and Agents.
             <LI> April 2025: We are doing a 2-day version of the AIware Bootcamp at the ICSE'25 conference. <a href="https://www.aiwarebootcamp.com/mini.html">Register and details here.</a>
